--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -188,20 +188,25 @@ In symbolic alternate alleles for imprecise structural variants, the ID field in
 ID values are case sensitive strings and must not contain whitespace, commas or angle brackets.
 The first level type must be one of the following:
 \begin{itemize}
-  \item DEL Deletion relative to the reference
+  \item DEL Region of lowered copy number relative to the reference, or a deletion breakpoint
   \item INS Insertion of novel sequence relative to the reference
-  \item DUP Region of elevated copy number relative to the reference
+  \item DUP Region of elevated copy number relative to the reference, or a tandem duplication breakpoint
   \item INV Inversion of reference sequence
   \item CNV Copy number variable region (may be both deletion and duplication)
-  \item BND Breakend
 \end{itemize}
 
-The CNV category should not be used when a more specific category can be applied. Reserved subtypes include:
+The CNV category should not be used when a more specific category can be applied.
+
+Implementations are free to define their own subtypes.
+The presence of a subtype does not change either the copy number or breakpoint interpretation of a symbolic structural variant allele.
+The following subtypes are recommended:
 \begin{itemize}
   \item DUP:TANDEM Tandem duplication
   \item DEL:ME Deletion of mobile element relative to the reference
   \item INS:ME Insertion of a mobile element relative to the reference
 \end{itemize}
+
+Note that the position of symbolic structural variant alleles is the position of the base immediately preceding the variant.
 
 \bigskip
 
@@ -316,7 +321,8 @@ Fixed fields are:
   The value in the POS field refers to the position of the first base in the String.
   For simple insertions and deletions in which either the REF or one of the ALT alleles would otherwise be null/empty, the REF and ALT Strings must include the base before the event (which must be reflected in the POS field), unless the event occurs at position 1 on the contig in which case it must include the base after the event; \pagebreak[1] this padding base is not required (although it is permitted) for e.g.\ complex substitutions or other events where all alleles have at least one base represented in their Strings.
   If any of the ALT alleles is a symbolic allele (an angle-bracketed ID String ``$<$ID$>$'') then the padding base is required and POS denotes the coordinate of the base preceding the polymorphism.
-  Tools processing VCF files are not required to preserve case in the allele Strings. (String, Required).
+  The exception to this is the $<$*$>$ symbolic alleles for which the reference call interval includes the POS base.
+  Tools processing VCF files are not required to preserve case in the REF allele Strings. (String, Required).
 
   If the reference sequence contains IUPAC ambiguity codes not allowed by this specification (such as R = A/G), the ambiguous reference base must be reduced to a concrete base by using the one that is first alphabetically (thus R as a reference base is converted to A in VCF.)
 
@@ -595,11 +601,18 @@ If a precise ALT allele is present in a record with the $IMPRECISE$ flag, $CIPOS
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=NOVEL,Number=0,Type=Flag,Description="Indicates a novel structural variation">
-##INFO=<ID=END,Number=1,Type=Integer,Description="End position of the variant described in this record">
+##INFO=<ID=END,Number=1,Type=Integer,Description="End position of the longest variant described in this record">
 \end{verbatim}
 \normalsize
-For precise variants, END is $\mbox{POS} + \mbox{length of REF allele} - 1$, and the for imprecise variants the corresponding best estimate.
 
+$END$ position of the longest variant described in this record.
+
+For record containing no symbolic alleles, END is $\mbox{POS} + \mbox{length of REF allele} - 1$.
+For records containing symbolic structural variant alleles, END is $\mbox{POS} + $\mbox${SVLEN}$.
+For records containing the $<$*$>$ symbolic allele, END corresponds to the last reference call position.
+
+Due to the potential for loss of information, no VCF record can contain both the $<$*$>$ symbolic allele and a symbolic structural variant allele.
+  
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=SVTYPE,Number=1,Type=String,Description="Type of structural variant">
@@ -612,7 +625,7 @@ Refer to section \ref{altfield} for the set of valid ALT field symbolic structur
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=SVLEN,Number=.,Type=Integer,Description="Length of the structural variant">
+##INFO=<ID=SVLEN,Number=A,Type=Integer,Description="Length of structural variant">
 \end{verbatim}
 \normalsize
 
@@ -620,11 +633,13 @@ One value for each ALT allele.
 
 SVLEN is defined for $INS$, $DUP$, $INV$, and $DEL$ symbolic alleles as the number of the inserted, duplicated, inverted, and deleted bases respectively.
 SVLEN is defined for $CNV$ symbolic alleles as the length of the segment over which the copy number variant is defined.
-The missing value should be used for all other ALT allele, including ALT alleles using breakend notation.
+The missing value $.$ should be used for all other ALT allele, including ALT alleles using breakend notation.
+
+Note that for structural variant symbolic allele $POS$ corresponds, 
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=CIPOS,Number=.,Type=Integer,Description="Confidence interval around POS for imprecise variants">
+##INFO=<ID=CIPOS,Number=.,Type=Integer,Description="Confidence interval around POS for symbolic structural variants">
 \end{verbatim}
 \normalsize
 
@@ -640,13 +655,17 @@ Each $CIPOS$ interval must span 0. That is, the lower bound cannot be greater th
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=CIEND,Number=2,Type=Integer,Description="Confidence interval around END for imprecise variants">
+##INFO=<ID=CIEND,Number=.,Type=Integer,Description="Confidence interval around END for symbolic structural variants">
 \end{verbatim}
 \normalsize
 
 If present, the number of entries must be twice the number of ALT alleles.
-$CIEND$ consists of successive pairs of records indicating the start and end offsets relative to $END$ of the confidence interval for each ALT allele.
+$CIEND$ consists of successive pairs of records encoding the confidence interval start and end offsets relative to the $END$ position inferred by $SVLEN$ for each ALT allele.
+For symbolic structural variants, the first in the pair must not be greater than 0, and the second must not be less than 0.
+For all other alleles, both should be the missing value $.$.
 For example, $CIEND=-5,5,.,.$ indicates a 5bp confidence interval in each direction around the end position for the first ALT allele, and no $CIEND$ is defined for the second alt allele.
+
+If $CIEND$ is missing, $CIEND$ is assumed to match $CIPOS$.
 
 \footnotesize
 \begin{verbatim}
